--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Lazy Mine</title>
-    <link rel="stylesheet" media="screen" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <title>Lazymine</title>
+  <link rel="stylesheet" media="screen" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://material-ui.com/main.css">
+
 </head>
 
 <body>
-    <div id="main" class="container"></div>        
-    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>    
-    <script src="js/main.js"> </script> 
+  <div id="main" class="container-fluid">
+    <div class="row">
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <script src="js/main.js">
+  </script>
 </body>
+
 </html>
