--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,23 @@
 <html>
 
 <head>
-  <title>Lazymine</title>
-  <link rel="stylesheet" media="screen" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/main.css">
+    <title>Lazymine</title>
+    <link rel="stylesheet" media="screen" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
 <body>
-  <div id="main" class="container-fluid">
-    <div class="row">
+    <div id="main" class="container-fluid">
+        <div class="row">
+        </div>
     </div>
-  </div>
-  <script src="js/lib/jquery-2.1.3.js"></script>
-  <script src="js/lib//bootstrap.min.js"></script>
-  <script src="js/main.js">
-  </script>
+    <script src="js/lib/jquery-2.1.3.js"></script>
+    <script src="js/lib//bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/tray.js"></script>
 </body>
 
 </html>
