--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
     <script src="js/lib/jquery-2.1.3.js"></script>
     <script src="js/lib//bootstrap.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/tray.js"></script>
+    <script src="js/shell/tray.js"></script>
+    <script src="js/shell/window.js"></script>
 </body>
 
 </html>
