A bunch of changes.  -  React with the new UI  - Store does not emit payload in the event but view requests payload. More manageable.

--- a/src/index.html
+++ b/src/index.html
@@ -7,103 +7,10 @@
     <link href="css/material.min.css" rel="stylesheet">
     <link href="css/ripples.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-<body>
-  <nav class="navbar navbar-default">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#"><img src="assets/top-logo.png" /></a>
-      </div>
-  </nav>
-  <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <input type="text" class="search-control" placeholder="Type a name, id, #latest, #mine, #lastupdated..."/>
-          </div>
-          <div class="col-md-12">
-            <h4>LATEST TASKS ASSIGNED TO YOU</h4>
-          </div>
-          <div class="list-group">
-              <div class="list-group-item">
-                  <div class="row-action-primary">
-                      <i>F</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">15 mins ago </div>
-                      <h4 class="list-group-item-heading">FMSOA - Ominix Appointment Concierge</h4>
-                      <p class="list-group-item-text">#27732 - Web Widget UI Design and Development (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-              <div class="list-group-item">
-                  <div class="row-action-primary">
-                      <i>U</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">20 mins ago</div>
-                      <h4 class="list-group-item-heading">UICIR - UIE Circle</h4>
-                      <p class="list-group-item-text">#27732 - UX Revolution related tasks (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-          </div>
-          <div class="col-md-12">
-              <h4>LAST TIME ENTERED TASKS</h4>
-          </div>
-          <div class="list-group">
-              <div class="list-group-item">
-                  <div class="row-action-primary">
-                      <i>F</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">15 mins ago </div>
-                      <h4 class="list-group-item-heading">FMSOA - Ominix Appointment Concierge</h4>
-                      <p class="list-group-item-text">#27732 - Web Widget UI Design and Development (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-              <div class="list-group-item updated">
-                  <div class="row-action-primary">
-                      <i>U</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">20 mins ago</div>
-                      <h4 class="list-group-item-heading">UICIR - UIE Circle</h4>
-                      <p class="list-group-item-text">#27732 - UX Revolution related tasks (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-              <div class="list-group-item">
-                  <div class="row-action-primary">
-                      <i>U</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">20 mins ago</div>
-                      <h4 class="list-group-item-heading">UICIR - UIE Circle</h4>
-                      <p class="list-group-item-text">#27732 - UX Revolution related tasks (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-              <div class="list-group-item">
-                  <div class="row-action-primary">
-                      <i>U</i>
-                  </div>
-                  <div class="row-content">
-                      <div class="least-content">20 mins ago</div>
-                      <h4 class="list-group-item-heading">UICIR - UIE Circle</h4>
-                      <p class="list-group-item-text">#27732 - UX Revolution related tasks (new)</p>
-                  </div>
-              </div>
-              <div class="list-group-separator"></div>
-          </div>
-      </div>
-
-  </div>
-  <div class="btn-group btn-group-justified" style="position:fixed; bottom:0;">
-      <a href="javascript:void(0)" class="btn btn-cancel btn-lg">CANCEL</a>
-      <a href="javascript:void(0)" class="btn btn-success btn-lg">UPDATE</a>
-  </div>
-  <a href="javascript:void(0)" class="btn btn-success btn-fab btn-raised mdi-notification-sync top-refresh"></a>
+<body id="lazymine-App">
 
 </body>
 
