Re-factoring related to component state management.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </body>
 
   <script src="js/lib/jquery-2.1.3.js"></script>
-  <script src="js/lib//bootstrap.min.js"></script>
+  <script src="js/lib/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/shell/tray.js"></script>
   <script src="js/shell/window.js"></script>
