--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,11 @@
 <html>
 <head>
     <title>Lazymine</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" >
-    <link href="css/roboto.min.css" rel="stylesheet">
-    <link href="css/material.min.css" rel="stylesheet">
-    <link href="css/ripples.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/lib/bootstrap.min.css" rel="stylesheet" >
+    <link href="css/lib/roboto.min.css" rel="stylesheet">
+    <link href="css/lib/material.min.css" rel="stylesheet">
+    <link href="css/lib/ripples.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body id="lazymine-App">
 
@@ -17,6 +15,5 @@
   <script src="js/lib/jquery-2.1.3.js"></script>
   <script src="js/lib/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/shell/tray.js"></script>
-  <script src="js/shell/window.js"></script>
+  <script src="js/support.js"></script>  
 </html>
