--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <link href="css/lib/roboto.min.css" rel="stylesheet">
     <link href="css/lib/material.min.css" rel="stylesheet">
     <link href="css/lib/ripples.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+    <link href="css/lib/base.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">    
 </head>
 <body id="lazymine-App">
 
@@ -14,6 +15,7 @@
 
   <script src="js/lib/jquery-2.1.3.js"></script>
   <script src="js/lib/bootstrap.min.js"></script>
+  <script src="js/lib/base.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/support.js"></script>  
 </html>
