--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <link href="css/lib/base.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body id="lazymine-App">
+<body>
+    <div id="lazymine-App"></div>
 </body>
 <script src="js/lib/jquery-2.1.3.js"></script>
 <script src="js/main.js"></script>
