--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </body>
 <script src="js/lib/jquery-2.1.3.js"></script>
 <script src="js/lib/datepicker.js"></script>
+<script src="js/config.js"></script>
 <script src="js/main.js"></script>
 <script src="js/lib/base.min.js"></script>
 <script src="js/support.js"></script>
