Adding Google Analytics to monitor usage. Need to set the analytics account key

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Lazymine</title>
     <link href="css/lib/base.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script type="text/javascript" src="js/lib/GALocalStorage.js"></script>
 </head>
 <body>
     <div id="lazymine-App"></div>
